feat: convert resource ids to names
