# src/api/teams/{teamId}/services/{serviceId}.ts
@@ -1,37 +1,0 @@
-import Debug from 'debug'
-import { Operation, OperationHandlerArray } from 'express-openapi'
-import { OpenApiRequestExt, Service } from 'src/otomi-models'
-
-const debug = Debug('otomi:api:teams:services')
-
-export default function (): OperationHandlerArray {
-  const del: Operation = [
-    async ({ otomi, params: { teamId, serviceId } }: OpenApiRequestExt, res): Promise<void> => {
-      debug(`deleteService(${serviceId})`)
-      await otomi.deleteService(decodeURIComponent(teamId), decodeURIComponent(serviceId))
-      res.json({})
-    },
-  ]
-  const get: Operation = [
-    ({ otomi, params: { teamId, serviceId } }: OpenApiRequestExt, res): void => {
-      debug(`getService(${serviceId})`)
-      const data = otomi.getService(decodeURIComponent(teamId), decodeURIComponent(serviceId))
-      res.json(data)
-    },
-  ]
-  const put: Operation = [
-    async ({ otomi, params: { teamId, serviceId }, body }: OpenApiRequestExt, res): Promise<void> => {
-      debug(`editService(${serviceId})`)
-      const data = await otomi.editService(decodeURIComponent(teamId), decodeURIComponent(serviceId), {
-        ...body,
-      } as Service)
-      res.json(data)
-    },
-  ]
-  const api = {
-    delete: del,
-    get,
-    put,
-  }
-  return api
-}
