# src/api/teams/{teamId}/workloads/{workloadId}/values.ts
@@ -1,31 +1,0 @@
-import Debug from 'debug'
-import { Operation, OperationHandlerArray } from 'express-openapi'
-import { OpenApiRequestExt, WorkloadValues } from 'src/otomi-models'
-
-const debug = Debug('otomi:api:teams:workloadValues')
-
-export default function (): OperationHandlerArray {
-  const get: Operation = [
-    ({ otomi, params: { teamId, workloadId } }: OpenApiRequestExt, res): void => {
-      debug(`getWorkloadValues(${workloadId})`)
-      const data = otomi.getWorkloadValues(decodeURIComponent(teamId), decodeURIComponent(workloadId))
-      res.json(data)
-    },
-  ]
-
-  const put: Operation = [
-    async ({ otomi, params: { teamId, workloadId }, body }: OpenApiRequestExt, res): Promise<void> => {
-      debug(`putWorkloadValues(${workloadId})`)
-      const data = await otomi.editWorkloadValues(decodeURIComponent(teamId), decodeURIComponent(workloadId), {
-        ...body,
-      } as WorkloadValues)
-      res.json(data)
-    },
-  ]
-
-  const api = {
-    get,
-    put,
-  }
-  return api
-}
