# src/openapi/api.yaml
@@ -244,7 +244,7 @@ paths:
         '400':
           <<: *BadRequest
 
-  '/teams/{teamId}/services/{serviceId}':
+  '/teams/{teamId}/services/{serviceName}':
     parameters:
       - $ref: '#/components/parameters/teamParams'
       - $ref: '#/components/parameters/serviceParams'
@@ -389,10 +389,10 @@ paths:
               schema:
                 $ref: '#/components/schemas/SealedSecret'
 
-  '/teams/{teamId}/sealedsecrets/{secretId}':
+  '/teams/{teamId}/sealedsecrets/{sealedSecretName}':
     parameters:
       - $ref: '#/components/parameters/teamParams'
-      - $ref: '#/components/parameters/secretParams'
+      - $ref: '#/components/parameters/sealedSecretParams'
     get:
       operationId: getSealedSecret
       description: Get a sealed secret from a given team
@@ -481,50 +481,6 @@ paths:
               schema:
                 $ref: '#/components/schemas/Secret'
 
-  '/teams/{teamId}/secrets/{secretId}':
-    parameters:
-      - $ref: '#/components/parameters/teamParams'
-      - $ref: '#/components/parameters/secretParams'
-    get:
-      operationId: getSecret
-      description: Get a secret from a given team
-      x-aclSchema: Secret
-      responses:
-        <<: *DefaultGetResponses
-        '200':
-          description: Successfully obtained secret configuration
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Secret'
-    put:
-      operationId: editSecret
-      description: Edit a secret from a given team
-      x-aclSchema: Secret
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Secret'
-        description: Secret object that contains updated values
-        required: true
-      responses:
-        <<: *DefaultGetResponses
-        '200':
-          description: Successfully edited a team secret
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Secret'
-    delete:
-      operationId: deleteSecret
-      description: Delete a secret from a given team
-      x-aclSchema: Secret
-      responses:
-        <<: *DefaultGetResponses
-        '200':
-          description: Successfully deleted a team secret
-
   '/netpols':
     get:
       operationId: getAllNetpols
@@ -576,7 +532,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Netpol'
 
-  '/teams/{teamId}/netpols/{netpolId}':
+  '/teams/{teamId}/netpols/{netpolName}':
     parameters:
       - $ref: '#/components/parameters/teamParams'
       - $ref: '#/components/parameters/netpolParams'
@@ -671,7 +627,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Backup'
 
-  '/teams/{teamId}/backups/{backupId}':
+  '/teams/{teamId}/backups/{backupName}':
     parameters:
       - $ref: '#/components/parameters/teamParams'
       - $ref: '#/components/parameters/backupParams'
@@ -780,7 +736,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Build'
 
-  '/teams/{teamId}/builds/{buildId}':
+  '/teams/{teamId}/builds/{buildName}':
     parameters:
       - $ref: '#/components/parameters/teamParams'
       - $ref: '#/components/parameters/buildParams'
@@ -1101,7 +1057,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Project'
 
-  '/teams/{teamId}/projects/{projectId}':
+  '/teams/{teamId}/projects/{projectName}':
     parameters:
       - $ref: '#/components/parameters/teamParams'
       - $ref: '#/components/parameters/projectParams'
@@ -1211,7 +1167,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/CodeRepo'
 
-  '/teams/{teamId}/coderepos/{codeRepoId}':
+  '/teams/{teamId}/coderepos/{codeRepositoryName}':
     parameters:
       - $ref: '#/components/parameters/teamParams'
       - $ref: '#/components/parameters/codeRepoParams'
@@ -1326,7 +1282,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Workload'
 
-  '/teams/{teamId}/workloads/{workloadId}':
+  '/teams/{teamId}/workloads/{workloadName}':
     parameters:
       - $ref: '#/components/parameters/teamParams'
       - $ref: '#/components/parameters/workloadParams'
@@ -1370,7 +1326,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Workload'
 
-  '/teams/{teamId}/workloads/{workloadId}/values':
+  '/teams/{teamId}/workloads/{workloadName}/values':
     parameters:
       - $ref: '#/components/parameters/teamParams'
       - $ref: '#/components/parameters/workloadParams'
@@ -1684,14 +1640,14 @@ servers:
 components:
   parameters:
     backupParams:
-      name: backupId
+      name: backupName
       in: path
       description: ID of the backup
       required: true
       schema:
         type: string
     buildParams:
-      name: buildId
+      name: buildName
       in: path
       description: ID of the build
       required: true
@@ -1712,16 +1668,16 @@ components:
       schema:
         type: string
     projectParams:
-      name: projectId
+      name: projectName
       in: path
       description: ID of the project
       required: true
       schema:
         type: string
     codeRepoParams:
-      name: codeRepoId
+      name: codeRepositoryName
       in: path
-      description: ID of the code repo
+      description: Name of the code repository
       required: true
       schema:
         type: string
@@ -1733,23 +1689,23 @@ components:
       schema:
         type: string
     netpolParams:
-      name: netpolId
+      name: netpolName
       in: path
-      description: ID of the network policy
+      description: Name of the network policy
       required: true
       schema:
         type: string
     serviceParams:
-      name: serviceId
+      name: serviceName
       in: path
       description: ID of the service
       required: true
       schema:
         type: string
-    secretParams:
-      name: secretId
+    sealedSecretParams:
+      name: sealedSecretName
       in: path
-      description: ID of the secret
+      description: Name of the sealed secret
       required: true
       schema:
         type: string
@@ -1761,7 +1717,7 @@ components:
       schema:
         type: string
     workloadParams:
-      name: workloadId
+      name: workloadName
       in: path
       description: ID of the workload
       required: true
